# python-web-application

./: LICENSE  README.md  app.py  pyproject.toml  replit.nix
static/: style.css
templates/: home.html  input.html  result.html  table.html
